# check-aliases

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  README.md  aliases_lexer.l  main.c
features/: check-aliases.feature
src/: aliases_lexer.l  aliases_parser.y
